# inversion-plugin

./: stack.yaml
firststeps/: benchmark-inverses.csv  benchmarks.html  firststeps.cabal
firststeps/src/: Bench.hs  Compression.hs  Encryption.hs  Inverses.hs  Main.hs  PartialInverses.hs  Simulation.hs
